# swagger.json
@@ -2,7 +2,7 @@
   "openapi": "3.0.0",
   "info": {
     "version": "1.0",
-    "title": "Todos API",
+    "title": "ToDos API",
     "description": "API para administrar tarefas de usuários."
   },
   "servers": [
@@ -28,7 +28,7 @@
     "/login": {
       "post": {
         "tags": ["Auth"],
-        "description": "Autenticar um usuário.",
+        "summary": "Autenticar um usuário.",
         "security": [],
         "requestBody": {
           "content": {
@@ -63,10 +63,27 @@
         }
       }
     },
+    "/logout": {
+      "post": {
+        "tags": ["Auth"],
+        "summary": "Deslogar um usuário.",
+        "responses": {
+          "204": {
+            "description": "Usuário deslogado com sucesso."
+          },
+          "401": {
+            "description": "Usuário não logado."
+          },
+          "500": {
+            "description": "Erro interno do servidor."
+          }
+        }
+      }
+    },
     "/users": {
       "post": {
         "tags": ["User"],
-        "description": "Criar um novo usuário.",
+        "summary": "Criar um novo usuário.",
         "security": [],
         "requestBody": {
           "content": {
@@ -104,7 +121,7 @@
     "/users/{id}": {
       "put": {
         "tags": ["User"],
-        "description": "Atualizar um usuário.",
+        "summary": "Atualizar um usuário.",
         "parameters": [
           {
             "name": "id",
@@ -158,7 +175,7 @@
       },
       "delete": {
         "tags": ["User"],
-        "description": "Deletar um usuário.",
+        "summary": "Deletar um usuário e suas respectivas tarefas.",
         "parameters": [
           {
             "name": "id",
@@ -171,7 +188,7 @@
         ],
         "responses": {
           "204": {
-            "description": "Usuário deletado com sucesso."
+            "description": "Usuário e suas respectivas tarefas deletados com sucesso."
           },
           "401": {
             "description": "Usuário não logado."
@@ -191,7 +208,7 @@
     "/todos": {
       "get": {
         "tags": ["Todos"],
-        "description": "Listar todas as tarefas do usuário.",
+        "summary": "Listar todas as tarefas do usuário.",
         "parameters": [],
         "responses": {
           "200": {
@@ -207,7 +224,7 @@
       },
       "post": {
         "tags": ["Todos"],
-        "description": "Criar uma nova tarefa.",
+        "summary": "Criar uma nova tarefa para o usuário.",
         "parameters": [],
         "requestBody": {
           "content": {
@@ -245,7 +262,7 @@
     "/todos/{id}": {
       "get": {
         "tags": ["Todos"],
-        "description": "Obter uma tarefa específica do usuário.",
+        "summary": "Obter uma tarefa específica do usuário.",
         "parameters": [
           {
             "name": "id",
@@ -273,7 +290,7 @@
       },
       "put": {
         "tags": ["Todos"],
-        "description": "Atualizar uma tarefa.",
+        "summary": "Atualizar uma tarefa do usuário.",
         "parameters": [
           {
             "name": "id",
@@ -321,7 +338,7 @@
       },
       "delete": {
         "tags": ["Todos"],
-        "description": "Deletar uma tarefa.",
+        "summary": "Deletar uma tarefa do usuário.",
         "parameters": [
           {
             "name": "id",
